Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-2344

qpid/messaging/uuid.h r899657 breaks Windows build...

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • 0.6
    • 0.7
    • C++ Client
    • None
    • Visual Studio 2008

    Description

      The friend declarations break the VS2008 build - the compiler doesn't seem to automatically apply the Microsoft declspec from the operators with the friend function keyword.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            shuston Stephen D. Huston
            kbonin Kerry Bonin
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 1h
                1h
                Remaining:
                Remaining Estimate - 1h
                1h
                Logged:
                Time Spent - Not Specified
                Not Specified

                Slack

                  Issue deployment