Apply QPID_CLIENT_EXTERN where needed; should have been in with r900592. Fixes QPID-2344.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@900880 13f79535-47bb-0310-9956-ffa450edef68